--- a/custom_components/versatile_thermostat/translations/sk.json
+++ b/custom_components/versatile_thermostat/translations/sk.json
@@ -32,7 +32,8 @@
           "sync_device_internal_temp": "Synchronizácia teploty zariadenia",
           "lock": "Správa zámku",
           "finalize": "Všetko hotové",
-          "configuration_not_complete": "Konfigurácia nie je dokončená"
+          "configuration_not_complete": "Konfigurácia nie je dokončená",
+          "heating_failure_detection": "Detekcia porúch vykurovania"
         }
       },
       "lock": {
@@ -85,7 +86,8 @@
           "use_motion_feature": "Použite detekciu pohybu",
           "use_power_feature": "Použite správu napájania",
           "use_presence_feature": "Použite detekciu prítomnosti",
-          "use_central_boiler_feature": "Použite centrálny kotol. Začiarknutím tohto políčka pridáte ovládanie do centrálneho kotla. Po zaškrtnutí tohto políčka budete musieť nakonfigurovať VTherm, ktorý bude mať ovládanie centrálneho kotla, aby sa prejavilo. Ak jeden VTherm vyžaduje ohrev, kotol sa zapne. Ak žiadny VTherm nevyžaduje ohrev, kotol sa vypne. Príkazy na zapnutie/vypnutie centrálneho kotla sú uvedené na príslušnej konfiguračnej stránke"
+          "use_central_boiler_feature": "Použite centrálny kotol. Začiarknutím tohto políčka pridáte ovládanie do centrálneho kotla. Po zaškrtnutí tohto políčka budete musieť nakonfigurovať VTherm, ktorý bude mať ovládanie centrálneho kotla, aby sa prejavilo. Ak jeden VTherm vyžaduje ohrev, kotol sa zapne. Ak žiadny VTherm nevyžaduje ohrev, kotol sa vypne. Príkazy na zapnutie/vypnutie centrálneho kotla sú uvedené na príslušnej konfiguračnej stránke",
+          "use_heating_failure_detection_feature": "Použiť detekciu porúch vykurovania"
         }
       },
       "type": {
@@ -283,6 +285,28 @@
           "max_opening_degrees": "Maximálna hodnota stupňa otvorenia pre každé základné zariadenie, oddelené čiarkami. Predvolená hodnota je 100. Ventil sa nikdy neotvorí viac ako táto hodnota. Príklad: 80, 85, 90",
           "max_closing_degree": "Maximálna hodnota stupňa zatvorenia. Ventil sa nikdy nezatvorí viac ako táto hodnota. Nastavte na 100 pre úplné zatvorenie ventilu"
         }
+      },
+      "heating_failure_detection": {
+        "title": "Detekcia porúch vykurovania",
+        "description": "Konfigurácia funkcie detekcie porúch vykurovania. Detekuje anomálie, keď sa očakáva vykurovanie, ale teplota nestúpa, alebo keď je vykurovanie vypnuté, ale teplota stále stúpa.",
+        "data": {
+          "use_heating_failure_detection_feature": "Povoliť detekciu porúch vykurovania",
+          "use_heating_failure_detection_central_config": "Použiť centrálnu konfiguráciu detekcie porúch",
+          "heating_failure_threshold": "Prah poruchy vykurovania",
+          "cooling_failure_threshold": "Prah poruchy chladenia",
+          "heating_failure_detection_delay": "Oneskorenie detekcie (minúty)",
+          "temperature_change_tolerance": "Tolerancia zmeny teploty (°C)",
+          "failure_detection_enable_template": "Šablóna povolenia detekcie"
+        },
+        "data_description": {
+          "use_heating_failure_detection_feature": "Povoliť detekciu anomálií vykurovania pre VTherm s TPI",
+          "use_heating_failure_detection_central_config": "Zaškrtnite pre použitie centrálnej konfigurácie detekcie porúch. Odškrtnite pre použitie špecifických parametrov pre tento VTherm",
+          "heating_failure_threshold": "Percentuálny prah zapnutia, nad ktorým by vykurovanie malo spôsobiť zvýšenie teploty (0.9 = 90%)",
+          "cooling_failure_threshold": "Percentuálny prah zapnutia, pod ktorým by teplota nemala stúpať (0.0 = 0%)",
+          "heating_failure_detection_delay": "Čas v minútach na čakanie pred kontrolou, či sa teplota zmenila podľa očakávania",
+          "temperature_change_tolerance": "Minimálna zmena teploty v stupňoch považovaná za významnú. Menšie zmeny sú ignorované na filtrovanie šumu snímača (predvolené: 0.5°C)",
+          "failure_detection_enable_template": "Voliteľná šablóna Jinja2, ktorá musí vrátiť True na povolenie detekcie. Užitočné na dočasné vypnutie detekcie, keď je aktívny externý zdroj tepla (napr. `is_state('binary_sensor.pec_na_drevo', 'off')` v dvojitých zložených zátvorkách). Ak je prázdne, detekcia je vždy povolená."
+        }
       }
     },
     "error": {
@@ -334,7 +358,8 @@
           "sync_device_internal_temp": "Synchronizácia teploty zariadenia",
           "lock": "Správa zámku",
           "finalize": "Všetko hotové",
-          "configuration_not_complete": "Konfigurácia nie je dokončená"
+          "configuration_not_complete": "Konfigurácia nie je dokončená",
+          "heating_failure_detection": "Detekcia porúch vykurovania"
         }
       },
       "lock": {
@@ -387,7 +412,8 @@
           "use_motion_feature": "Použite detekciu pohybu",
           "use_power_feature": "Použite správu napájania",
           "use_presence_feature": "Použite detekciu prítomnosti",
-          "use_central_boiler_feature": "Použite centrálny kotol. Začiarknutím tohto políčka pridáte ovládanie do centrálneho kotla. Po zaškrtnutí tohto políčka budete musieť nakonfigurovať VTherm, ktorý bude mať ovládanie centrálneho kotla, aby sa prejavilo. Ak jeden VTherm vyžaduje ohrev, kotol sa zapne. Ak žiadny VTherm nevyžaduje ohrev, kotol sa vypne. Príkazy na zapnutie/vypnutie centrálneho kotla sú uvedené na príslušnej konfiguračnej stránke"
+          "use_central_boiler_feature": "Použite centrálny kotol. Začiarknutím tohto políčka pridáte ovládanie do centrálneho kotla. Po zaškrtnutí tohto políčka budete musieť nakonfigurovať VTherm, ktorý bude mať ovládanie centrálneho kotla, aby sa prejavilo. Ak jeden VTherm vyžaduje ohrev, kotol sa zapne. Ak žiadny VTherm nevyžaduje ohrev, kotol sa vypne. Príkazy na zapnutie/vypnutie centrálneho kotla sú uvedené na príslušnej konfiguračnej stránke",
+          "use_heating_failure_detection_feature": "Použiť detekciu porúch vykurovania"
         }
       },
       "type": {
@@ -584,6 +610,28 @@
           "min_opening_degrees": "Minimálna hodnota stupňa otvorenia pre každé základné zariadenie, oddelená čiarkami. Predvolená hodnota je 0. Príklad: 20, 25, 30",
           "max_opening_degrees": "Maximálna hodnota stupňa otvorenia pre každé základné zariadenie, oddelené čiarkami. Predvolená hodnota je 100. Ventil sa nikdy neotvorí viac ako táto hodnota. Príklad: 80, 85, 90",
           "max_closing_degree": "Maximálna hodnota stupňa zatvorenia. Ventil sa nikdy nezatvorí viac ako táto hodnota. Nastavte na 100 pre úplné zatvorenie ventilu"
+        }
+      },
+      "heating_failure_detection": {
+        "title": "Detekcia porúch vykurovania",
+        "description": "Konfigurácia funkcie detekcie porúch vykurovania. Detekuje anomálie, keď sa očakáva vykurovanie, ale teplota nestúpa, alebo keď je vykurovanie vypnuté, ale teplota stále stúpa.",
+        "data": {
+          "use_heating_failure_detection_feature": "Povoliť detekciu porúch vykurovania",
+          "use_heating_failure_detection_central_config": "Použiť centrálnu konfiguráciu detekcie porúch",
+          "heating_failure_threshold": "Prah poruchy vykurovania",
+          "cooling_failure_threshold": "Prah poruchy chladenia",
+          "heating_failure_detection_delay": "Oneskorenie detekcie (minúty)",
+          "temperature_change_tolerance": "Tolerancia zmeny teploty (°C)",
+          "failure_detection_enable_template": "Šablóna povolenia detekcie"
+        },
+        "data_description": {
+          "use_heating_failure_detection_feature": "Povoliť detekciu anomálií vykurovania pre VTherm s TPI",
+          "use_heating_failure_detection_central_config": "Zaškrtnite pre použitie centrálnej konfigurácie detekcie porúch. Odškrtnite pre použitie špecifických parametrov pre tento VTherm",
+          "heating_failure_threshold": "Percentuálny prah zapnutia, nad ktorým by vykurovanie malo spôsobiť zvýšenie teploty (0.9 = 90%)",
+          "cooling_failure_threshold": "Percentuálny prah zapnutia, pod ktorým by teplota nemala stúpať (0.0 = 0%)",
+          "heating_failure_detection_delay": "Čas v minútach na čakanie pred kontrolou, či sa teplota zmenila podľa očakávania",
+          "temperature_change_tolerance": "Minimálna zmena teploty v stupňoch považovaná za významnú. Menšie zmeny sú ignorované na filtrovanie šumu snímača (predvolené: 0.5°C)",
+          "failure_detection_enable_template": "Voliteľná šablóna Jinja2, ktorá musí vrátiť True na povolenie detekcie. Užitočné na dočasné vypnutie detekcie, keď je aktívny externý zdroj tepla (napr. `is_state('binary_sensor.pec_na_drevo', 'off')` v dvojitých zložených zátvorkách). Ak je prázdne, detekcia je vždy povolená."
         }
       }
     },
